--- a/public/css/depoimentos.css
+++ b/public/css/depoimentos.css
@@ -54,21 +54,21 @@ form sapn:hover {
   color: black;
 }
 
-#form .input-field input[type=text]:focus {
+#formDepoimentos .input-field input[type=text]:focus {
   border-bottom: 1px solid #ff7e00;
   box-shadow: 0 1px 0 0 #ff7e00;
 }
 
-#form textarea:focus {
+#formDepoimentos textarea:focus {
   border-bottom: 1px solid #ff7e00;
   box-shadow: 0 1px 0 0 #ff7e00;
 }
 
-#form .input-field label {
+#formDepoimentos .input-field label {
   color: #000;
 }
 
-#form .input-field .prefix.active {
+#formDepoimentos .input-field .prefix.active {
   color: #ff7e00;
 }
 
@@ -77,7 +77,8 @@ form sapn:hover {
 }
 
 .logo {
-  padding-top: 15vh;
+  border-radius: 100px;
+  cursor: pointer;
 }
 
 #login h1 {
