--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -139,4 +139,4 @@
     </script>
 
 **************************************************************************** treino  
-
+<script src="/js/formDepoimentos.js"></script>
