--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -10,9 +10,12 @@
         <h1 style="text-align:center;font-weight:bold;margin:0;">Cadastrar Aluno</H1>
         <div class="row" style="text-align: center;">
             <div class="col s12 m12">
-                <form class="formValidate" id="formValidate" method="POST" action="/home/cadastrarAlunos" enctype="multipart/form-data">
-                    <input type="file" id="imgUser" name="imgUser" accept="image/*" style="display: none;">
-                    <img id="inseriImagem" class="responsive-img logo" src="../../img/imgUser.png" alt="High Performance">
+                <form class="formValidate" id="formCad" method="POST" action="/home/cadastrarAlunos" enctype="multipart/form-data">
+                    <div class="input-field">
+                        <input type="file" id="imgUser" name="imgUser" accept="image/*" style="display: none;" data-error=".errorTxt1">
+                        <img id="inseriImagem" class="responsive-img logo" src="../../img/imgUser.png" alt="High Performance">
+                        <div class="errorTxt1"></div>
+                    </div>
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
                         <input name="nome" id="nome" type="text" data-error=".errorTxt1">
