--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -17,6 +17,7 @@
 <script src="/js/formEditarAluno.js"></script>
 
 <script src="/js/formCadastroAluno.js"></script>
+<script src="/js/formDepoimentos.js"></script>
 
 <script src="/js/messages_pt_BR.js"></script>
 
