--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -28,7 +28,7 @@
     background-color: #f0f0f5;
     box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
     margin: 50px;
-    height: 580px;
+    height: 540px;
     border-radius: 10px;
 }
 
@@ -46,7 +46,7 @@ body {
     font-size: 30px;
     font-weight: bold;
     margin: 0;
-    padding-top: 20px;
+    padding-top: 30vh;
 }
 
 .cadastro p {
@@ -88,19 +88,23 @@ form .btn:hover {
     color: black;
 }
 
-#form .input-field input[type=password]:focus,
-#form .input-field input[type=text]:focus,
-#form .input-field input[type=tel]:focus,
-#form .input-field input[type=email]:focus {
+#containerForm{
+    margin-top: 7vh;
+}
+
+#formCad .input-field input[type=password]:focus,
+#formCad .input-field input[type=text]:focus,
+#formCad .input-field input[type=tel]:focus,
+#formCad .input-field input[type=email]:focus {
     border-bottom: 1px solid #ff7e00;
     box-shadow: 0 1px 0 0 #ff7e00;
 }
 
-#form .input-field .prefix.active {
+#formCad .input-field .prefix.active {
     color: #ff7e00;
 }
 
-#form .input-field label {
+#formCad .input-field label {
     color: #000;
 }
 
@@ -126,5 +130,11 @@ form .btn:hover {
     
     form .btn {
         width: 87%;
+    }
+    #containerForm{
+        margin-top: 0;
+    }
+    #cadastroContainer h1 {
+        padding-top: 0;
     }
 }
