--- a/public/css/depoimentos.css
+++ b/public/css/depoimentos.css
@@ -54,6 +54,10 @@ form sapn:hover {
   color: black;
 }
 
+#inputOpnion{
+  visibility: hidden;
+}
+
 #formDepoimentos .input-field input[type=text]:focus {
   border-bottom: 1px solid #ff7e00;
   box-shadow: 0 1px 0 0 #ff7e00;
@@ -85,7 +89,7 @@ form sapn:hover {
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 40px;
-  padding-top: 30px;
+  padding-top: 10px;
 }
 
 .bannerimg {
@@ -100,10 +104,14 @@ form sapn:hover {
   #banner h1 {
       margin-top: 50%;
   }
-  .logo {
-      padding-top: 10vh;
-  }
   form .btn {
       width: 89%;
+  }
+  #login h1 {
+    font-size: 20px;
+    text-align: center;
+  }
+  #btn{
+    margin-top: 40px;
   }
 }
