--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -16,8 +16,8 @@
                 <p>Faça seu cadastro, entre na plataforma e monitore seus alunos.</p>               
             </div>
 
-            <div class="col s12 m12 l7">
-                <form id="form" action="/cadastro" method="POST">
+            <div class="col s12 m12 l7" id="containerForm">
+                <form id="formCad" action="/cadastro" method="POST">
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
                         <input name="name" id="name" type="text" data-error=".errorTxt1">
