Impelementando controller depoimentos

--- a/views/depoimentos.ejs
+++ b/views/depoimentos.ejs
@@ -32,16 +32,16 @@
 
         <div class="input-field">
             <i class="material-icons prefix">gavel</i>
-            <label for="job">Profisão</label>
-            <input name="job" id="job" type="text" data-error=".errorTxt3">  
+            <label for="profissao">Profisão</label>
+            <input name="profissao" id="profissao" type="text" data-error=".errorTxt3">  
             <div class="errorTxt3 right-align"></div>                  
         </div>
 
         <div class="row">
           <div class="input-field col s12">
               <i class="material-icons prefix">question_answer</i>
-              <textarea name="msg" id="msg" class="materialize-textarea" data-length="100" data-error=".errorTxt4"></textarea>
-              <label for="msg">Mensagem</label>
+              <textarea name="mensagem" id="mensagem" class="materialize-textarea" data-length="100" data-error=".errorTxt4"></textarea>
+              <label for="mensagem">Mensagem</label>
               <div class="errorTxt4 right-align"></div>
           </div>
       </div>
