--- a/views/index.ejs
+++ b/views/index.ejs
@@ -111,7 +111,7 @@
         <% for (depoimento of depoimentos) { %>
             <a class="carousel-item center-align" href="#one!">
                 <section>
-                    <img src="<%= depoimento.img%>" alt="Depoimento <%= depoimento.id%>" width="100" height="100">
+                    <img src="<%= depoimento.img%>" alt="Depoimento <%= depoimento.id%>" width="100" height="100" style="border-radius: 50%;">
                     <h5><%= depoimento.nome%></h5>
                     <p><%= depoimento.profissao%></p>
                     <hr>
