--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,7 +82,7 @@
             </svg>
 
             <h4 class="center-align">FICHA DOS ALUNOS</h4>
-            <p class="center-align">Tenha uma ficha completa dos seus alunos.</p>
+            <p class="center-align">Tenha uma ficha completa dos seus alunos completa.</p>
         </div>
     </div>
 
