--- a/views/novaAula.ejs
+++ b/views/novaAula.ejs
@@ -1,4 +1,112 @@
 <%- include('partials/header') %>
+<link rel=”canonical” href="https://highperformancedh.azurewebsites.net"/>
+<link rel="stylesheet" href="/css/cadastroAlunos.css">
+</head>
+<body>
+<%- include('partials/navBar') %>
+<%- include('partials/bikeGif') %> 
+
+<div class="cadastro" style="padding: 7px;">
+<h1 style="text-align:center;font-weight:bold;margin:0;">Criar nova Aula</H1>
+<div class="row" style="text-align: center;">
+    <div class="col s12 m12">
+        <form class="formValidate" id="formCad" method="POST" action="/home/novaAula" enctype="multipart/form-data">
+            <div class="input-field">
+                <i class="material-icons prefix">account_circle</i>
+                <input name="nome" id="nome" type="text">
+                <label for="nome">Aula</label>
+                <div class="errorTxt1 right-align "></div>
+            </div>
+            <div class="input-field">
+                <i class="material-icons prefix">directions_run</i>
+                <input name="observacoes" id="observacoes" type="text">
+                <label for="observacoes">Detalhes</label>
+                <div class="errorTxt2 right-align "></div>
+            </div>
+            <div class="input-field">
+                <i class="material-icons prefix">account_circle</i>
+                <select name="aluno_id">
+                  <option value="" disabled selected>Aluno </option>
+                  <% for(aluno of alunos) { %>
+                  <option value="<%= aluno.id %>"><%= aluno.nome %></option>
+                <% } %>
+                </select>
+
+            </div>      
+            <div class="input-field">
+                <i class="material-icons prefix">date_range</i>
+                <input name="data_aula" type="date" class="form-control" data-error=".errorTxt4">
+                <!-- <label for="date">Data</label> -->
+                <div class="errorTxt4 right-align"></div>
+            </div>
+            <div class="input-field">
+                <i class="material-icons prefix">access_time</i>
+                <input name="horario" type="time" class="form-control" data-error=".errorTxt4">
+                <!-- <label for="horario">Horário</label> -->
+                <div class="errorTxt4 right-align"></div>
+            </div>
+            <div class="input-field">
+                <button class="btn waves-effect waves-light right submit" type="submit" name="action"
+                    id="btnSubmit">Cadastrar</button>
+            </div>
+        </form>
+    </div>
+</div>
+</div>
+
+<script>
+let inserirImagem =  document.getElementById('inseriImagem')
+let imagemUser = document.getElementById('imgUser')
+inserirImagem.addEventListener('click', ()=>imagemUser.click())
+
+var loadFile = function(event) {
+    var reader = new FileReader();
+    reader.onload = function(){
+        var output = document.getElementById('inseriImagem');
+        output.src = reader.result;
+        console.log(output.src)
+    }
+    reader.readAsDataURL(event.target.files[0]);
+}
+      
+imagemUser.addEventListener('change',loadFile)           
+
+
+</script>
+
+<%- include('partials/footer') %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+
+<%- include('partials/header') %>
 <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
 <link rel="stylesheet" href="/css/cadastroAlunos.css">
 </head>
@@ -18,19 +126,19 @@
         <form class="formValidate" id="formValidate" method="POST" action="/home/novaAula">
             <div class="input-field">
                 <i class="material-icons prefix">account_circle</i>
-                <input name="name" id="name" type="text" data-error=".errorTxt1">
-                <label for="name">Aula</label>
+                <input name="nome" id="nome" type="text">
+                <label for="nome">Aula</label>
                 <div class="errorTxt1 right-align "></div>
             </div>
             <div class="input-field">
                 <i class="material-icons prefix">directions_run</i>
-                <input name="email" id="email" type="email" data-error=".errorTxt2">
-                <label for="email">Meta</label>
+                <input name="observacoes" id="observacoes" type="text">
+                <label for="observacoes">Detalhes</label>
                 <div class="errorTxt2 right-align "></div>
             </div>
             <div class="input-field">
                 <i class="material-icons prefix">account_circle</i>
-                <select>
+                <select name="aluno_id" id="aluno_id">
                     
                   <option value="" disabled selected>Aluno </option>
                   <% for(aluno of alunos) { %>
@@ -41,15 +149,15 @@
             </div>      
             <div class="input-field">
                 <i class="material-icons prefix">date_range</i>
-                <input name="data" type="date" class="form-control" data-error=".errorTxt4">
-                <label for="date">Data</label>
-                <div class="errorTxt4 right-align"></div>
+                <input name="data_aula" type="date" class="form-control" data-error=".errorTxt4">
+                <label for="date">Data</label> -->
+                <!-- <div class="errorTxt4 right-align"></div>
             </div>
             <div class="input-field">
                 <i class="material-icons prefix">access_time</i>
-                <input name="time" type="time" class="form-control" data-error=".errorTxt4">
-                <label for="time">Horário</label>
-                <div class="errorTxt4 right-align"></div>
+                <input name="horario" type="time" class="form-control" data-error=".errorTxt4">
+                <label for="horario">Horário</label> -->
+                <!-- <div class="errorTxt4 right-align"></div>
             </div>
             <div class="input-field">
                 <button class="btn waves-effect waves-light right submit" type="submit" name="action">CRIAR
@@ -60,4 +168,4 @@
 </div>
 </div>
 
-<%- include('partials/footer') %>
+<%- include('partials/footer') %> -->
