--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -17,7 +17,7 @@
                         <div class="errorTxt1"></div>
                     </div>
                     <div class="input-field">
-                        <i class="material-icons prefix">account_circle</i>
+                        <i class="material-icons prefix">check</i>
                         <input name="nome" id="nome" type="text" data-error=".errorTxt1">
                         <label for="nome">Nome</label>
                         <div class="errorTxt1 right-align "></div>
