Implementando alteracao financas

--- a/public/css/financas.css
+++ b/public/css/financas.css
@@ -26,7 +26,7 @@
 
 #grafico {
     height: 100%;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 20vh;
 }
 
@@ -44,17 +44,27 @@
     margin-top: 120px;
 }
 
-.card i,
-.card2 i {
+.card i {
     margin-left: 50px;
     margin-top: 50px;
     color: white;
 }
+.card2 i {
+    margin-left: 50px;
+    margin-top: 15px;
+    color: white;
+}
 
-.card p,
-.card2 p {
+.card p {
     margin-right: 32px;
     margin-top: 15px;
+    font-weight: bold;
+    color: white;
+}
+
+.card2 p {
+    margin-right: 32px;
+    margin-top: -40px;
     font-weight: bold;
     color: white;
 }
@@ -76,7 +86,7 @@
     background: #FDC830;
     background: -webkit-linear-gradient(to left, #F37335, #FDC830);
     background: linear-gradient(to right, #F37335, #FDC830);
-    height: 157px;
+    height: 80px;
 }
 
 #lista {
@@ -91,6 +101,45 @@
 #alunosAtivos {
     margin-top: 100px;
     margin-bottom: 100px;
+}
+
+#formFinancas{
+    margin-bottom: 40vh;
+}
+
+#formFinancas li:focus,
+#formFinancas .input-field input[type=number]:focus  {
+    border-bottom: 1px solid #ff7e00;
+    box-shadow: 0 1px 0 0 #ff7e00;
+}
+
+#formFinancas .input-field label {
+    color: #000;
+}
+
+#formFinancas .input-field .prefix.active {
+    color: #ff7e00;
+}
+
+.error {
+    color: red;
+}
+
+#formFinancas li>span {
+    color: #000 !important;
+  }
+
+#formFinancas button{
+    margin-top: 20px;
+    background-color: #ff7e00;
+    border-radius: 8px;
+    width: 20%;
+    font-weight: bold
+   }
+
+   #formFinancas button:hover{
+    background-color: white;
+    color: black;
 }
 
 #footer {
