--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -18,6 +18,8 @@
 
 <script src="/js/formCadastroAluno.js"></script>
 <script src="/js/formDepoimentos.js"></script>
+<script src="/js/formFinancas.js"></script>
+<script src="/js/formCadFinancas.js"></script>
 
 <script src="/js/messages_pt_BR.js"></script>
 
